--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@100mslive/hms-video-store": "^0.6.2"
+		"@100mslive/hms-video-store": "^0.6.3-alpha.1"
 	}
 }
